# BSU

./: .gitignore  README.md
FAMCS/sem1/C++/lab1/: lab1.sln
FAMCS/sem1/C++/lab10/: lab10.sln
FAMCS/sem1/C++/lab11/: lab11.sln
FAMCS/sem1/C++/lab13/: lab13.sln
FAMCS/sem1/C++/lab2/: lab2.sln
FAMCS/sem1/C++/lab3/: lab3.sln
FAMCS/sem1/C++/lab5/: lab5.sln
FAMCS/sem1/C++/lab6/: lab6.sln
FAMCS/sem1/C++/lab7/: lab7.sln
FAMCS/sem1/C++/lab8/: lab8.sln
FAMCS/sem1/C++/lab9/: lab9.sln
FAMCS/sem1/х полезные фичи/: nullptr  string - разбитие строки на слова  кодировочка изи.cpp  рандомное заполнение.cpp
FAMCS/sem2/C++/lab 10/: lab 10.sln
FAMCS/sem2/C++/lab 13/: lab 13.sln
MMF/3sem/C++/lab5/: CMakeLists.txt
MMF/3sem/C++/lab5/frame/include/: MyAux.h
MMF/3sem/C++/lab5/frame/include/matrix/: BoolMatrix.h  Matrix.h  NumericMatrix.h
MMF/3sem/C++/lab5/frame/src/: MyAux.cpp
MMF/3sem/C++/lab5/frame/src/matrix/: BoolMatrix.cpp  Matrix.cpp  NumericMatrix.cpp
MMF/3sem/C++/lab5/resources/input/: boolMatrixOne.txt  boolMatrixTwo.txt
MMF/3sem/C++/lab5/resources/output/: output.txt
MMF/3sem/C++/lab5/start/: Main.cpp
MMF/3sem/DataBase/: SQLQuery1.sql  SQLQuery2.sql  SQLQuery3.sql  SQLQuery4.sql  SQLQuery5.sql
MMF/4sem/BI/: lab1.qvw  lab2.qvw  lab4.qvw  lab5.qvw  lab6.qvw
MMF/4sem/db/: final_task.sql
MMF/4sem/practice_BI/: sc.qvw
MMF/5sem/sharp/: Store.sln
MMF/6-7sem/statistic/: lab1.py
MMF/dip_lukyanovich/: dip_pres.pptx  pres_text.docx  диплом.docx
MMF/dip_lukyanovich/log_schem_test/: log_schem_test.sln
MMF/dip_lukyanovich/program/: biblel
(+1076 files in other folders)
